2017-01-16         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNULIB.

2017-01-10         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNULIB.
	Twice in one day!  Sigh.

2017-01-03         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNULIB.

2016-12-27         Juergen Kahrs         <Juergen.Kahrs@googlemail.com>

	* CMakeLists.txt: New file.

2016-12-22         John E. Malmberg      <wb8tyw@qsl.net>

	* dfa.c fixes for OpenVMS

2016-12-22         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog: Created.
	* Makefile.am: New file.
	* dfa.c, dfa.h, getopt.c, getopt.h, getopt1.c, getopt_int.h,
	intprops.h, localeinfo.c, localeinfo.h, random.c, random.h,
	regcomp.c, regex.c, regex.h, regex_internal.c, regex_internal.h,
	regexec.c, verify.h, xalloc.h: Moved here from parent directory.