@@ -1,3 +1,9 @@
+2017-01-19         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* localeinfo.h: Sync with GNULIB.
+	* localeinfo.c: Ditto.
+	* dfa.c: Ditto, to fix a memory leak.
+
 2017-01-16         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c: Sync with GNULIB.
